Request rate variation issue fixed